Added DELETE All endpoint
