# config/routes.rb
@@ -3,5 +3,6 @@ Rails.application.routes.draw do
   mount Rswag::Api::Engine => '/api-docs'
   get 'proxies' => 'proxies#index'
   post 'proxies' =>  'proxies#create'
+  delete 'proxies' =>  'proxies#purge'
   post 'proxies/batch' =>  'proxies#create_batch'
 end
